# jsonnet-go-sys

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  generate-bindings.sh
.github/workflows/: cargo.yml
src/: bindings.rs  lib.rs  wrapper.h
tests/: basic.rs
