[package]
name = "jsonnet-go-sys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
links = "jsonnet"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.0.83"
semver = "1.0.23"
target-lexicon = "0.12.12"

[dependencies]
semver = "1.0.23"
