[package]
name = "jsonnet-go-sys"
version = "0.1.1+go-jsonnet-v0.20.0"
edition = "2021"
license = "Apache-2.0"
links = "jsonnet"
authors = ["swlynch99"]
description = "Rust bindings for the go-jsonnet C API"
repository = "https://github.com/swlynch99/jsonnet-go-sys"
documentation = "https://docs.rs/jsonnet-go-sys"

exclude = [
    "go-jsonnet/testdata",
    "go-jsonnet/cpp-jsonnet/doc",
    "go-jsonnet/cpp-jsonnet/test_suite",
    "go-jsonnet/cpp-jsonnet/case_studies",
    "go-jsonnet/cpp-jsonnet/perf_tests",
]

[build-dependencies]
cc = "1.0.83"
semver = "1.0.23"
target-lexicon = "0.12.12"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
